tests/Ninja/Loader/builds.ninja
# Check build decl loading.
#
# RUN: %{llbuild} ninja load-manifest %s > %t 2> %t.err
# RUN: %{FileCheck} < %t %s
# RUN: %{FileCheck} --check-prefix=CHECK-ERR < %t.err %s

# CHECK: build "target1": phony
build target1: phony

# CHECK: build "target2": phony "explicit-a" "explicit-b" | "implicit-a" "implicit-b" || "order-a" "order-b"
build target2: phony explicit-a explicit-b | implicit-a implicit-b || order-a order-b

# CHECK-ERR: builds.ninja:[[@LINE+1]]:15: error: unknown rule
build target3: no-rule

# CHECK: build "target4": phony
# CHECK-NEXT: command = "value1"
# CHECK-NEXT: description = "value2"
build target4: phony
      command = value1
      description = value2

# Check that we properly evaluate values in bindings (which do not use prior
# bindings in the decl).
#
# CHECK: build "target5": phony
# CHECK-NEXT: command = "A C"
target5_varA = A
build target5: phony
      target5_varA = B
      command = ${target5_varA} C

# Check that we diagnose empty paths in build statements.
#
# CHECK-ERR: builds.ninja:[[@LINE+3]]:14: error: empty output path
# CHECK-ERR: builds.ninja:[[@LINE+2]]:36: error: empty input path
target6_var =
build target6 ${target6_var}: phony ${target6_var}

# Check all the attributes that can be assigned.
pool poolA
     depth = 12
# CHECK: build "target7": phony
# CHECK: command = "thecommand"
# CHECK: deps = gcc
# CHECK: depfile = "thedepfile"
# CHECK: generator = 1
# CHECK: restat = 1
# CHECK: pool = poolA
build target7: phony
      command = thecommand
      description = thedescription
      deps = gcc
      depfile = thedepfile
      generator = true
      restat = true
      pool = poolA

# Check error handling of deps statements.
#
# CHECK-ERR: builds.ninja:[[@LINE+1]]:0: error: invalid 'deps' style
build target8: phony
      deps = unknown
# CHECK-ERR: builds.ninja:[[@LINE+1]]:0: error: missing 'depfile' attribute
build target9: phony
      deps = gcc
# CHECK-ERR: builds.ninja:[[@LINE+1]]:0: error: invalid 'depfile' attribute
build target9: phony
      deps = msvc
      depfile = foobar

# Check error handling of pool statement.
#
# CHECK-ERR: builds.ninja:[[@LINE+1]]:0: error: unknown pool
build target8: phony
      pool = thisisnotapool
